--- a/OkkaKalipWeb.UI/Views/Home/Index.cshtml
+++ b/OkkaKalipWeb.UI/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<OkkaKalipWeb.Entities.Product>
+﻿@model OkkaKalipWeb.UI.Models.ProductListModel
 @{
     Layout = null;
 }
@@ -11,7 +11,7 @@
     <title>Index</title>
 </head>
 <body>
-    @foreach (var item in Model)
+    @foreach (var item in Model.Products)
     {
         <p>@item.Name</p>
     }
