product list screen and product detail page are basically coded

--- a/OkkaKalipWeb.UI/Views/Shared/PartialViews/_navbar.cshtml
+++ b/OkkaKalipWeb.UI/Views/Shared/PartialViews/_navbar.cshtml
@@ -45,7 +45,7 @@
                                 -->
                             </li>
                             <li class="menu-item @(ViewBag.SelectedMenu=="About"?"current-menu-ancestor current-menu-parent":"")">
-                                <a asp-area="" asp-controller="About" asp-action="Index">Hakkımızda</a>
+                                <a asp-controller="About" asp-action="Index">Hakkımızda</a>
                                 <!--
                                  <ul class="sub-menu">
                                      <li class="menu-item"><a href="about-us.html">About Us</a></li>
@@ -81,13 +81,13 @@
                                 -->
                             </li>
                             <li class="menu-item @(ViewBag.SelectedMenu=="Shop"?"current-menu-ancestor current-menu-parent":"")">
-                                <a asp-area="" asp-controller="Shop" asp-action="Index">Ürünler</a>
+                                <a asp-controller="Shop" asp-action="Index">Ürünler</a>
                             </li>
                             <li class="menu-item @(ViewBag.SelectedMenu=="News"?"current-menu-ancestor current-menu-parent":"")">
                                 <a asp-area="" asp-controller="News" asp-action="Index">Haberler</a>
                             </li>
                             <li class="menu-item @(ViewBag.SelectedMenu=="Contact"?"current-menu-ancestor current-menu-parent":"")">
-                                <a asp-area="" asp-controller="Contact" asp-action="Index">İletişim</a>
+                                <a asp-controller="Contact" asp-action="Index">İletişim</a>
                                 <!--
                                 <ul class="sub-menu">
                                     <li class="menu-item current-menu-item page_item current_page_item"><a href="news.html">News 1</a></li>
@@ -125,13 +125,13 @@
                                 <a href="/">Anasayfa</a>
                             </li>
                             <li class="menu-item @(ViewBag.SelectedMenu=="About"?"current-menu-ancestor current-menu-parent":"")">
-                                <a asp-area="" asp-controller="About" asp-action="Index">Hakkımızda</a>
+                                <a asp-controller="About" asp-action="Index">Hakkımızda</a>
                             </li>
                             <li class="menu-item @(ViewBag.SelectedMenu=="Shop"?"current-menu-ancestor current-menu-parent":"")">
-                                <a asp-area="" asp-controller="Shop" asp-action="Index">Ürünler</a>
+                                <a asp-controller="Shop" asp-action="Index">Ürünler</a>
                             </li>
                             <li class="menu-item @(ViewBag.SelectedMenu=="News"?"current-menu-ancestor current-menu-parent":"")">
-                                <a asp-area="" asp-controller="News" asp-action="Index">Haberler</a>
+                                <a asp-controller="News" asp-action="Index">Haberler</a>
                             </li>
                             <!--
                             <li class="menu-item menu-item-has-children">
@@ -144,7 +144,7 @@
                             </li>
                                 -->
                             <li class="menu-item @(ViewBag.SelectedMenu=="Contact"?"current-menu-ancestor current-menu-parent":"")">
-                                <a asp-area="" asp-controller="Contact" asp-action="Index">İletişim</a>
+                                <a asp-controller="Contact" asp-action="Index">İletişim</a>
                             </li>
                         </ul>
                         <a href="#" class="btn btn-primary">Giriş / Kaydol</a>
