--- a/OkkaKalipWeb.UI/Views/Shared/Components/_singleProduct.cshtml
+++ b/OkkaKalipWeb.UI/Views/Shared/Components/_singleProduct.cshtml
@@ -1,15 +1,16 @@
-﻿<div class="col-md-6">
+﻿@model Product
+<div class="col-md-6">
     <div class="product-box">
         <div class="product-head">
-            <img src="https://via.placeholder.com/750x750.png" alt="image product">
+            <img src="@Model.ImageUrl" alt="@Model.Name">
             <div class="product-btn">
-                <a href="cart.html" class="btn btn-primary">Add to cart</a>
-                <a href="shop-detail.html" class="btn view-detail">View Details</a>
+                <a href="cart.html" class="btn btn-primary">Sepete Ekle</a>
+                <a asp-controller="Shop" asp-action="Details" asp-route-id="@Model.Id" class="btn view-detail">Ürün Detayı</a>
             </div>
         </div>
         <div class="product-content">
-            <div class="product-price"><span class="sale">$13.00 </span><span class="price">$20.00</span></div>
-            <h3><a href="shop-detail.html">Earmuff Brim Hard Hat </a></h3>
+            <div class="product-price"><span class="sale">@Model.Price </span><span class="price">@Model.Price</span></div>
+            <h3><a href="shop-detail.html">@Model.Name </a></h3>
         </div>
     </div>
 </div>
