--- a/OkkaKalipWeb.UI/Views/Shared/Components/_sidebarCategory.cshtml
+++ b/OkkaKalipWeb.UI/Views/Shared/Components/_sidebarCategory.cshtml
@@ -2,40 +2,15 @@
     <div id="search-2" class="widget widget_search">
         <form role="search" method="get" id="search-form" class="search-form" action="#">
             <div class="input-group">
-                <input type="search" name="EMAIL" class="form-control search-field" placeholder="search..." value="">
+                <input type="search" name="EMAIL" class="form-control search-field" placeholder="Ara..." value="">
                 <span class="input-group-btn">
                     <button type="submit" class="btn btn-search"><i class="icon ion-md-search"></i></button>
                 </span>
             </div>
         </form>
     </div>
-    <div id="categories-2" class="widget filter_price">
-        <h4 class="widget-title">Finter by price copy</h4>
-        <div class="filter-price">
-            <div class="price-slide"></div>
-            <a href="#" class="btn-filter">Filter</a>
-            <span>Price: $50  -  $500</span>
-        </div>
-    </div>
     <div id="categories-2" class="widget widget_categories">
-        <h4 class="widget-title">Categories</h4>
-        <ul>
-            <li><a href="#">All Products</a></li>
-            <li class="cat-item cat-item-3"><a href="#">Transportation & Distribution</a></li>
-            <li class="cat-item cat-item-4"><a href="#">Oil & Gas exploited</a></li>
-            <li class="cat-item cat-item-5 current-menu-item"><a href="#">Automotive Manufacturing</a></li>
-            <li class="cat-item cat-item-6"><a href="#">Industrial Construction</a></li>
-            <li class="cat-item cat-item-1"><a href="#">Manufacture</a></li>
-            <li class="cat-item cat-item-1"><a href="#">Green Energy</a></li>
-        </ul>
-    </div>
-    <div id="tag_cloud-2" class="widget widget_tag_cloud">
-        <h4 class="widget-title">Product Tags</h4>
-        <div class="tagcloud">
-            <a href="#">Factory</a>
-            <a href="#">Construction</a>
-            <a href="#">Automotive</a>
-            <a href="#">Green Energy</a>
-        </div>
+        <h4 class="widget-title">Kategoriler</h4>
+      @await Component.InvokeAsync("CategoryList")
     </div>
 </div>
