--- a/OkkaKalipWeb.UI/Views/_ViewImports.cshtml
+++ b/OkkaKalipWeb.UI/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using OkkaKalipWeb.Entities
 @using OkkaKalipWeb.UI.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper OkkaKalipWeb.UI.TagHelpers.*,OkkaKalipWeb.UI
