management panel added

--- a/OkkaKalipWeb.UI/Views/Shared/PartialViews/_navbar.cshtml
+++ b/OkkaKalipWeb.UI/Views/Shared/PartialViews/_navbar.cshtml
@@ -97,7 +97,7 @@
                                 -->
                             </li>
                         </ul>
-                        <a href="#" class="btn btn-primary">Giriş / Kaydol</a>
+                        <a asp-controller="Admin" asp-action="Index" class="btn btn-primary">Giriş / Kaydol</a>
                     </div>
                 </div>
             </div>
@@ -147,7 +147,7 @@
                                 <a asp-controller="Contact" asp-action="Index">İletişim</a>
                             </li>
                         </ul>
-                        <a href="#" class="btn btn-primary">Giriş / Kaydol</a>
+                        <a asp-controller="Admin" asp-action="Index" class="btn btn-primary">Giriş / Kaydol</a>
                     </div>
                 </div>
             </div>
