product and category CRUD transactions were made.

--- a/OkkaKalipWeb.UI/Views/Admin/Index.cshtml
+++ b/OkkaKalipWeb.UI/Views/Admin/Index.cshtml
@@ -18,7 +18,7 @@
         </div>
     </div>
     <div class="card-body">
-        <a asp-controller="Admin" asp-action="CreateProduct">Ürün Ekle</a>
+        <h1>Admin Paneline Hoşgeldiniz</h1>
     </div>
     <!-- /.card-body -->
     <div class="card-footer">
