--- a/OkkaKalipWeb.UI/Views/Shared/Components/AdminComponents/_sidebarMenu.cshtml
+++ b/OkkaKalipWeb.UI/Views/Shared/Components/AdminComponents/_sidebarMenu.cshtml
@@ -24,7 +24,7 @@
         <nav class="mt-2">
             <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                 <!-- Add icons to the links using the .nav-icon class
-                     with font-awesome or any other icon font library -->
+                with font-awesome or any other icon font library -->
                 <li class="nav-item has-treeview">
                     <a href="#" class="nav-link">
                         <i class="nav-icon fas fa-tachometer-alt"></i>
@@ -55,12 +55,18 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a href="../widgets.html" class="nav-link">
-                        <i class="nav-icon fas fa-th"></i>
+                    <a asp-controller="Product" asp-action="ProductList" class="nav-link">
+                        <i class="nav-icon fas fa-boxes"></i>
                         <p>
-                            Widgets
+                            Ürün
                             <span class="right badge badge-danger">New</span>
                         </p>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a asp-controller="Product" asp-action="CategoryList" class="nav-link">
+                        <i class="nav-icon fas fa-archive"></i>
+                        <p>Kategori</p>
                     </a>
                 </li>
                 <li class="nav-item has-treeview menu-open">
