--- a/OkkaKalipWeb.UI/Views/Shared/_adminLayout.cshtml
+++ b/OkkaKalipWeb.UI/Views/Shared/_adminLayout.cshtml
@@ -11,6 +11,9 @@
     <!-- Ionicons
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     -->
+    <link href="~/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
+    <link href="~/css/responsive.bootstrap4.min.css" rel="stylesheet" />
+    <link href="~/admin/css/icheck-bootstrap.min.css" rel="stylesheet" />
     <!-- Theme style -->
     <link href="~/admin/css/adminlte.min.css" rel="stylesheet" />
     <!-- Google Font: Source Sans Pro -->
@@ -89,8 +92,29 @@
     <!-- Bootstrap 4 -->
     <script src="/modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <!-- AdminLTE App -->
+    <script src="~/js/jquery.dataTables.min.js"></script>
+    <script src="~/js/dataTables.bootstrap4.min.js"></script>
+    <script src="~/js/dataTables.responsive.min.js"></script>
+    <script src="~/js/responsive.bootstrap4.min.js"></script>
     <script src="~/admin/js/adminlte.min.js"></script>
     <!-- AdminLTE for demo purposes -->
     <script src="~/admin/js/demo.js"></script>
+
+    <script>
+    $(function () {
+            $("#example1").DataTable({
+                "responsive": true,
+                "autoWidth": false,
+            });
+            $('#example2').DataTable({
+                "paging": true,
+                "lengthChange": false,
+                "searching": false,
+                "ordering": true,
+                "info": true,
+                "autoWidth": false,
+                "responsive": true,
+            });
+        });</script>
 </body>
 </html>
