--- a/OkkaKalipWeb.UI/Views/Shared/_adminLayout.cshtml
+++ b/OkkaKalipWeb.UI/Views/Shared/_adminLayout.cshtml
@@ -11,9 +11,11 @@
     <!-- Ionicons
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     -->
-    <link href="~/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
-    <link href="~/css/responsive.bootstrap4.min.css" rel="stylesheet" />
+
+    <link href="~/admin/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
+    <link href="~/admin/css/responsive.bootstrap4.min.css" rel="stylesheet" />
     <link href="~/admin/css/icheck-bootstrap.min.css" rel="stylesheet" />
+
     <!-- Theme style -->
     <link href="~/admin/css/adminlte.min.css" rel="stylesheet" />
     <!-- Google Font: Source Sans Pro -->
@@ -62,6 +64,11 @@
                     <div class="row">
                         <div class="col-12">
                             <!-- Default box -->
+                            @if (TempData["message"] != null)
+                            {
+                                <partial name="_resultMessage" model="@(TempData.Get<ResultMessage>("message"))" />
+                            }
+
                             @RenderBody()
                             <!-- /.card -->
                         </div>
@@ -88,20 +95,23 @@
     </div>
     <!-- ./wrapper -->
     <!-- jQuery -->
-    <script src="/modules/jquery/dist/jquery.min.js"></script>
+    <script src="~/modules/jquery/dist/jquery.min.js"></script>
     <!-- Bootstrap 4 -->
-    <script src="/modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <!-- AdminLTE App -->
-    <script src="~/js/jquery.dataTables.min.js"></script>
-    <script src="~/js/dataTables.bootstrap4.min.js"></script>
-    <script src="~/js/dataTables.responsive.min.js"></script>
-    <script src="~/js/responsive.bootstrap4.min.js"></script>
     <script src="~/admin/js/adminlte.min.js"></script>
     <!-- AdminLTE for demo purposes -->
     <script src="~/admin/js/demo.js"></script>
+    <!-- Data Table -->
+    <script src="~/admin/js/jquery.dataTables.min.js"></script>
+    <script src="~/admin/js/dataTables.bootstrap4.min.js"></script>
+    <script src="~/admin/js/dataTables.responsive.min.js"></script>
+    <script src="~/admin/js/responsive.bootstrap4.min.js"></script>
+
+    @RenderSection("Scripts", false)
 
     <script>
-    $(function () {
+        $(function () {
             $("#example1").DataTable({
                 "responsive": true,
                 "autoWidth": false,
