--- a/OkkaKalipWeb.UI/Views/Admin/Index.cshtml
+++ b/OkkaKalipWeb.UI/Views/Admin/Index.cshtml
@@ -6,7 +6,7 @@
 
 <div class="card">
     <div class="card-header">
-        <h3 class="card-title">Title</h3>
+        <h3 class="card-title">Admin Panel</h3>
 
         <div class="card-tools">
             <button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
