--- a/OkkaKalipWeb.UI/Views/Product/CreateProduct.cshtml
+++ b/OkkaKalipWeb.UI/Views/Product/CreateProduct.cshtml
@@ -4,6 +4,15 @@
     Layout = "~/Views/Shared/_adminLayout.cshtml";
 }
 
+@section Scripts{
+    <script src="~/modules/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/modules/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.min.js"></script>
+    <script src="~/modules/ckeditor4/ckeditor.js"></script>
+    <script>
+        CKEDITOR.replace("editor");
+    </script>
+}
+
 <div class="row">
     <div class="col-md-12">
         <div class="card card-primary">
@@ -11,24 +20,32 @@
                 <h3 class="card-title">Ürün İşlemleri</h3>
             </div>
             <!-- /.card-header -->
+            @if (ViewBag.ErrorMessage != null)
+            {
+                <div class="text-danger">@ViewBag.ErrorMessage</div>
+            }
+
             <!-- form start -->
             <form asp-controller="Product" asp-action="CreateProduct" method="post">
+                <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="card-body">
                     <div class="form-group row">
                         <label asp-for="Name">Ürün Adı</label>
-                        <input asp-for="Name" class="form-control" placeholder="Ürün Adı Giriniz...">
+                        <input asp-for="Name" value="@Model.Name" class="form-control" placeholder="Ürün Adı Giriniz...">
+                        <span asp-validation-for="Name" class="text-danger"></span>
                     </div>
                     <div class="form-group row">
                         <label asp-for="ImageUrl">Image</label>
-                        <input asp-for="ImageUrl" class="form-control" placeholder="Ürün Resmi Yükleyiniz...">
+                        <input asp-for="ImageUrl" value="@Model.ImageUrl" class="form-control" placeholder="Ürün Resmi Yükleyiniz...">
                     </div>
                     <div class="form-group row">
                         <label asp-for="Price">Fiyatı</label>
-                        <input asp-for="Price" class="form-control" placeholder="Ürün Fiyatı Giriniz...">
+                        <input type="number" asp-for="Price" value="@Model.Price" class="form-control" placeholder="Ürün Fiyatı Giriniz...">
+                        <span asp-validation-for="Price" class="text-danger"></span>
                     </div>
                     <div class="form-group row">
                         <label asp-for="Description">Açıklama</label>
-                        <textarea asp-for="Description" id="editor" class="form-control" rows="3" placeholder="Ürün Açıklaması ..."></textarea>
+                        <textarea asp-for="Description" value="@Model.Description" id="editor" class="form-control" rows="3" placeholder="Ürün Açıklaması ..."></textarea>
                     </div>
                 </div>
                 <!-- /.card-body -->
