--- a/OkkaKalipWeb.UI/Views/Shared/Components/_singleProduct.cshtml
+++ b/OkkaKalipWeb.UI/Views/Shared/Components/_singleProduct.cshtml
@@ -2,9 +2,16 @@
 <div class="col-md-6">
     <div class="product-box">
         <div class="product-head">
-            <img src="@Model.ImageUrl" alt="@Model.Name">
+            <img src="~/img/@Model.ImageUrl" alt="@Model.Name">
             <div class="product-btn">
-                <a href="cart.html" class="btn btn-primary">Sepete Ekle</a>
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <form asp-controller="Cart" asp-action="AddToCart" method="post" class="form-inline">
+                        <input type="hidden" name="productId" value="@Model.Id" />
+                        <input type="hidden" name="quantity" value="1" />
+                        <button class="btn btn-primary" type="submit">Sepete Ekle</button>
+                    </form>
+                }
                 <a asp-controller="Shop" asp-action="Details" asp-route-id="@Model.Id" class="btn view-detail">Ürün Detayı</a>
             </div>
         </div>
