--- a/OkkaKalipWeb.UI/Views/Shared/PartialViews/_adminNavbar.cshtml
+++ b/OkkaKalipWeb.UI/Views/Shared/PartialViews/_adminNavbar.cshtml
@@ -11,21 +11,24 @@
                 <div class="col-md-9">
                     <div class="main-navigation">
                         <ul id="primary-menu" class="menu">
-                            <li class="menu-item @(ViewBag.SelectedMenu=="Home"?"current-menu-ancestor current-menu-parent":"")">
-                                <a href="/">Anasayfa</a>
-                            </li>
-                            <li class="menu-item @(ViewBag.SelectedMenu=="About"?"current-menu-ancestor current-menu-parent":"")">
-                                <a asp-controller="About" asp-action="Index">Hakkımızda</a>
-                            </li>
-                            <li class="menu-item @(ViewBag.SelectedMenu=="Shop"?"current-menu-ancestor current-menu-parent":"")">
-                                <a asp-controller="Shop" asp-action="Index">Ürünler</a>
-                            </li>
-                            <li class="menu-item @(ViewBag.SelectedMenu=="News"?"current-menu-ancestor current-menu-parent":"")">
-                                <a asp-area="" asp-controller="News" asp-action="Index">Haberler</a>
-                            </li>
-                            <li class="menu-item @(ViewBag.SelectedMenu=="Contact"?"current-menu-ancestor current-menu-parent":"")">
-                                <a asp-controller="Contact" asp-action="Index">İletişim</a>
-                            </li>
+                            @if (User.Identity.IsAuthenticated)
+                            {
+                                <li class="menu-item @(ViewBag.SelectedMenu=="Home"?"current-menu-ancestor current-menu-parent":"")">
+                                    <a href="/">Anasayfa</a>
+                                </li>
+                                <li class="menu-item @(ViewBag.SelectedMenu=="About"?"current-menu-ancestor current-menu-parent":"")">
+                                    <a asp-controller="About" asp-action="Index">Hakkımızda</a>
+                                </li>
+                                <li class="menu-item @(ViewBag.SelectedMenu=="Shop"?"current-menu-ancestor current-menu-parent":"")">
+                                    <a asp-controller="Shop" asp-action="Index">Ürünler</a>
+                                </li>
+                                <li class="menu-item @(ViewBag.SelectedMenu=="News"?"current-menu-ancestor current-menu-parent":"")">
+                                    <a asp-area="" asp-controller="News" asp-action="Index">Haberler</a>
+                                </li>
+                                <li class="menu-item @(ViewBag.SelectedMenu=="Contact"?"current-menu-ancestor current-menu-parent":"")">
+                                    <a asp-controller="Contact" asp-action="Index">İletişim</a>
+                                </li>
+                            }
                         </ul>
                         <a href="#" class="btn btn-primary">Giriş / Kaydol</a>
                     </div>
