--- a/OkkaKalipWeb.UI/Views/Shared/_Layout.cshtml
+++ b/OkkaKalipWeb.UI/Views/Shared/_Layout.cshtml
@@ -41,5 +41,7 @@
     <script src='~/js/jquery.isotope.min.js'></script>
     <script src='~/js/scripts.js'></script>
     <script src="~/js/bootstrap.min.js"></script>
+
+    @RenderSection("Scripts", false)
 </body>
 </html>
