--- a/OkkaKalipWeb.UI/Views/_ViewImports.cshtml
+++ b/OkkaKalipWeb.UI/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using OkkaKalipWeb.Entities
+@using OkkaKalipWeb.UI.Extensions
 @using OkkaKalipWeb.UI.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper OkkaKalipWeb.UI.TagHelpers.*,OkkaKalipWeb.UI
