--- a/OkkaKalipWeb.UI/Views/Product/EditCategory.cshtml
+++ b/OkkaKalipWeb.UI/Views/Product/EditCategory.cshtml
@@ -13,7 +13,7 @@
             <!-- /.card-header -->
             <!-- form start -->
             <form asp-controller="Product" asp-action="EditCategory" method="post">
-                <input type="hidden" name="Id" value="@Model.Id" />
+                <input type="hidden" name="id" value="@Model.Id" />
                 <div class="card-body">
                     <div class="form-group row">
                         <label asp-for="Name">Kategori Adı</label>
@@ -54,7 +54,7 @@
                                 <tr>
                                     <td>@item.Id</td>
                                     <td>
-                                        <img src="@item.ImageUrl" width="100" />
+                                        <img src="~/img/@item.ImageUrl" width="100" />
                                     </td>
                                     <td>@item.Name</td>
                                     <td>@item.Price</td>
