--- a/OkkaKalipWeb.UI/Views/Shared/PartialViews/_navbar.cshtml
+++ b/OkkaKalipWeb.UI/Views/Shared/PartialViews/_navbar.cshtml
@@ -44,8 +44,8 @@
                                     </ul>
                                 -->
                             </li>
-                            <li class="menu-item @(ViewBag.SelectedMenu=="About"?"current-menu-ancestor current-menu-parent":"")">
-                                <a asp-controller="About" asp-action="Index">Hakkımızda</a>
+                            <li asp-active-controllers="About" asp-active-actions="Index" asp-active-class="current-menu-ancestor current-menu-parent" class="menu-item">
+                                <a asp-controller="About" asp-action="Index">Kurumsal</a>
                                 <!--
                                  <ul class="sub-menu">
                                      <li class="menu-item"><a href="about-us.html">About Us</a></li>
@@ -80,13 +80,13 @@
                                  </ul>
                                 -->
                             </li>
-                            <li class="menu-item @(ViewBag.SelectedMenu=="Shop"?"current-menu-ancestor current-menu-parent":"")">
+                            <li asp-active-controllers="Shop" asp-active-actions="Index" asp-active-class="current-menu-ancestor current-menu-parent" class="menu-item">
                                 <a asp-controller="Shop" asp-action="Index">Ürünler</a>
                             </li>
-                            <li class="menu-item @(ViewBag.SelectedMenu=="News"?"current-menu-ancestor current-menu-parent":"")">
+                            <li asp-active-controllers="News" asp-active-actions="Index" asp-active-class="current-menu-ancestor current-menu-parent" class="menu-item">
                                 <a asp-area="" asp-controller="News" asp-action="Index">Haberler</a>
                             </li>
-                            <li class="menu-item @(ViewBag.SelectedMenu=="Contact"?"current-menu-ancestor current-menu-parent":"")">
+                            <li asp-active-controllers="Contact" asp-active-actions="Index" asp-active-class="current-menu-ancestor current-menu-parent" class="menu-item">
                                 <a asp-controller="Contact" asp-action="Index">İletişim</a>
                                 <!--
                                 <ul class="sub-menu">
@@ -97,7 +97,7 @@
                                 -->
                             </li>
 
-                            <li>
+                            <li class="menu-item">
 
                                 @if (User.Identity.IsAuthenticated)
                                 {
