--- a/OkkaKalipWeb.UI/Views/_ViewImports.cshtml
+++ b/OkkaKalipWeb.UI/Views/_ViewImports.cshtml
@@ -1,5 +1,7 @@
 ﻿@using OkkaKalipWeb.Entities
 @using OkkaKalipWeb.UI.Extensions
 @using OkkaKalipWeb.UI.Models
+@using OkkaKalipWeb.UI.Enums
+@using OkkaKalipWeb.UI.Services
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper OkkaKalipWeb.UI.TagHelpers.*,OkkaKalipWeb.UI
