Converts and BaseEntity

--- a/OkkaKalipWeb.UI/Views/Shared/Components/AdminComponents/_dangerModal.cshtml
+++ b/OkkaKalipWeb.UI/Views/Shared/Components/AdminComponents/_dangerModal.cshtml
@@ -1,4 +1,4 @@
-﻿@model Slider
+﻿@model BaseModel
 <!-- Modal -->
 <div class="modal fade" id="modal-danger@(Model.Id)">
     <div class="modal-dialog">
