--- a/OkkaKalipWeb.UI/Views/_ViewImports.cshtml
+++ b/OkkaKalipWeb.UI/Views/_ViewImports.cshtml
@@ -1,7 +1,9 @@
 ﻿@using OkkaKalipWeb.Entities
 @using OkkaKalipWeb.UI.Extensions
 @using OkkaKalipWeb.UI.Models
+@using OkkaKalipWeb.UI.Models.Interfaces
 @using OkkaKalipWeb.UI.Enums
 @using OkkaKalipWeb.UI.Services
+@using OkkaKalipWeb.UI.Functions
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper OkkaKalipWeb.UI.TagHelpers.*,OkkaKalipWeb.UI
